--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -76,5 +76,5 @@ jobs:
       - name: Make sure, Readme generated from lib.rs matches actual Readme
         if: matrix.os == 'ubuntu-latest'
         shell: bash
-        working-directory: ./tokenizers
+        working-directory: ./mosers
         run: cargo readme > must_match_readme.md && diff must_match_readme.md README.md
