--- a/python/Cargo.toml
+++ b/python/Cargo.toml
@@ -2,6 +2,10 @@
 name = "mosers-python"
 version = "0.1.0"
 edition = "2021"
+authors = [
+    "Leon Camus"
+]
+license = "LICENSE.txt"
 
 [lib]
 name = "mosers"
