--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          components: rustfmt, clippy, maturin
+          components: rustfmt, clippy
 
       - name: Lint with RustFmt
         uses: actions-rs/cargo@v1
@@ -41,6 +41,12 @@ jobs:
         with:
           python-version: 3.9
           architecture: "x64"
+
+      - name: Install Maturin
+        uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: maturin
 
       - name: Run tests
         working-directory: ./bindings/python
