--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -29,12 +29,6 @@ jobs:
           python-version: 3.9
           architecture: "x64"
 
-      - name: Install Maturin
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: maturin
-
       - name: Lint with RustFmt
         uses: actions-rs/cargo@v1
         with:
@@ -54,6 +48,7 @@ jobs:
           python -m venv .env
           source .env/bin/activate
           pip install -U pip
+          pip install -U maturin
           pip install pytest setuptools_rust
           source .env/bin/activate
           maturin develop --release
