--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,8 +22,11 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          components: rustfmt, clippy
+          components: rustfmt, clippy, llvm-tools-preview
           override: true
+
+      - name: Install Grcov
+        run: curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-x86_64-unknown-linux-gnu.tar.bz2 | tar jxf -
 
       # Necessary for now for the cargo cache: https://github.com/actions/cache/issues/133#issuecomment-599102035
       - if: matrix.os == 'ubuntu-latest'
@@ -60,11 +63,13 @@ jobs:
           command: clippy
           args: --manifest-path ./mosers/Cargo.toml --all-targets --all-features -- -D warnings
 
-      - name: Run lib Tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --verbose --manifest-path ./mosers/Cargo.toml --lib
+      - name: Run lib tests
+        run: |
+          export RUSTFLAGS="-Cinstrument-coverage"
+          cargo build --verbose
+          LLVM_PROFILE_FILE="shares-%p-%m.profraw" cargo test --verbose --manifest-path ./mosers/Cargo.toml --lib
+          ./grcov . --binary-path ./target/debug/ -s . -t lcov --branch --ignore-not-existing --ignore "/*" -o lcov.info
+          bash <(curl -s https://codecov.io/bash) -f lcov.info
 
       - name: Run doc Tests
         uses: actions-rs/cargo@v1
